# excel-writer-mcp

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/excel_writer_mcp/: __main__.py  server.py
tests/: test_server.py
