[project]
name = "excel-writer-mcp"
version = "0.1.0"
description = "MCP Server for writing Excel files (.xlsx/.xlsm) with openpyxl"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
]

[project.scripts]
excel-writer-mcp = "excel_writer_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_writer_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
