[project]
name = "excel-writer-mcp"
version = "1.0.3"
description = "MCP Server for writing Excel files (.xlsx/.xlsm) with openpyxl"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
excel-writer-mcp = "excel_writer_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_writer_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["excel_writer_mcp"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
